1. Улучшения Collection API